k8s/appchart/templates/db_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: postgres
        image: postgres:13.16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: dbdata
          mountPath: /var/lib/postgresql/data
        - name: initsql
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initsql
          configMap:
            name: postgres-init
        - name: dbdata
          persistentVolumeClaim:
            claimName: pvc-standard
