k8s/appchart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: myapp
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000  # Portul pe care backendul este expus in cluster
      targetPort: 5000  # Portul pe care aplicatia backend ruleaza in container
  selector:
    app: backend
