k8s/appchart/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432  # Portul pe care backendul este expus in cluster
      targetPort: 5432  # Portul pe care aplicatia backend ruleaza in container
  selector:
    app: postgres
