k8s/appchart/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80  # Portul pe care backendul este expus in cluster
      targetPort: 80  # Portul pe care aplicatia backend ruleaza in container
  selector:
    app: frontend
